Feat/78 session (#93)
* Implement basic session management in api

* Regenerate REST Client

* Update front-end to use authentification

* Fix linting & co

* Really fix typing

* Fix pytest

* Automation: Code Formatter (api)

* Automation: REST Client Generator

* Fix vue tests

* Fix lint

* Automation: Code Formatter (static)

* Remove now obsolete test

* Add additional tests

* Store jwt in cookie for reuse

* Automation: Code Formatter (api)

* Add missing doc

* Intercept ping in vue integration tests

* Review feedback (1/2)

* Review feedback (2/2)

* Automation: Code Formatter (static)

* Automation: REST Client Generator

* Remove unused import
