# api/mod/src/models/annotation.py
@@ -22,11 +22,6 @@ class AnnotationData(BaseModel):
         description="The hash of the file",
         example="e922903b4d5431a8f9def3c89ffcb0b18472f3da304f28a2dbef9028b6cd205d",
     )
-    username: str = Field(
-        ...,
-        description="The full name of the current user",
-        example="Prof. Dr. Folivora",
-    )
     competency: str = Field(
         ..., description="The competencies the annotator has", example="Prof. Dr. Med"
     )
@@ -50,11 +45,20 @@ class Annotation(AnnotationData):
         description="The location of the data file",
         example="ecg-qrs-classification-physiodb/sloth.jpg",
     )
+    fullname: str = Field(
+        ...,
+        description="The full name of the annotator",
+        example="Prof. Dr. Folivora",
+    )
 
     @classmethod
-    def from_data(cls, annotation_data: AnnotationData, src: str) -> "Annotation":
+    def from_data(
+        cls, annotation_data: AnnotationData, src: str, fullname: str
+    ) -> "Annotation":
         """Creates an Annotation from AnnotationData and additional attributes"""
-        return Annotation(**{**annotation_data.__dict__, **{"src": src}})
+        return Annotation(
+            **{**annotation_data.__dict__, **{"src": src, "fullname": fullname}}
+        )
 
     @property
     def absolute_src(self) -> Path:
@@ -75,10 +79,6 @@ class Annotation(AnnotationData):
         """Checks whether the proofs of the annotator are all valid"""
         return self.is_attentive and self.competency != "" and self.is_trained
 
-    def username_is_valid(self) -> bool:
-        """Checks whether the username is empty and therefore invalid"""
-        return self.username != ""
-
     def save(self) -> None:
         """
         Annotates the data file.
@@ -90,8 +90,6 @@ class Annotation(AnnotationData):
             raise InvalidProof()
         if not self.hash_is_valid():
             raise HashMismatch()
-        if not self.username_is_valid():
-            raise InvalidUsername()
         annotation_file = SETTINGS.data_folder.joinpath(f"{self.src}.annotation.json")
         with open(annotation_file, "w", encoding="utf-8") as file:
             file.write(json.dumps(self.__dict__, indent=4))
@@ -106,7 +104,3 @@ class HashMismatch(Exception):
 
 class InvalidProof(Exception):
     """Raised when proofs are invalid"""
-
-
-class InvalidUsername(Exception):
-    """Raised when username is invalid"""
